# 3d-modeling-tool

./: CMakeLists.txt  README.md  control_info.h  create_object.h  dat_stuct.h  default_objects.h  gravity_physics.h  hello.cpp  includedlibs.h  initVariables.h  light.h  load_file.h  main.cpp  minecraft_mode.h  object.h  object_draw.h  save_file.h  shaderReader.h  splines.h  text_info.h  texture.h
GL/: glui.cpp  glui.h
